--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -14,8 +14,8 @@
   <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title %>
-    <%= form.label :author %>
-    <%= form.text_field :author %>
+    # <%= form.label :author %>
+    # <%= form.text_field :author %>
   </div>
 
   <div class="actions">
