Added Author, Price, and Publish Date

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,21 @@
 <p>
   <strong>Title:</strong>
   <%= @book.title %>
-  # <%= @book.author %>
+</p>
+
+<p>
+  <strong>Author:</strong>
+  <%= @book.author %>
+</p>
+
+<p>
+  <strong>Price:</strong>
+  <%= @book.price %>
+</p>
+
+<p>
+  <strong>Publishdate:</strong>
+  <%= @book.publishDate %>
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
