--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -14,8 +14,21 @@
   <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title %>
-    # <%= form.label :author %>
-    # <%= form.text_field :author %>
+  </div>
+
+  <div class="field">
+    <%= form.label :author %>
+    <%= form.text_field :author %>
+  </div>
+
+  <div class="field">
+    <%= form.label :price %>
+    <%= form.text_field :price %>
+  </div>
+
+  <div class="field">
+    <%= form.label :publishDate %>
+    <%= form.date_select :publishDate %>
   </div>
 
   <div class="actions">
