Added other elements

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :publishDate %>
-    <%= form.date_select :publishDate %>
+    <%= form.label :publishdate %>
+    <%= form.datetime_select :publishdate %>
   </div>
 
   <div class="actions">
