--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Publishdate:</strong>
-  <%= @book.publishDate %>
+  <%= @book.publishdate %>
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
